# mylo-lang

./: CMakeLists.txt  LICENSE.txt  README.md  build_amiga.sh  mylo_reference.md  standardlib_reference.md
cmake/: MyloUtils.cmake  README.md
docs/: mylo_reference.md  standardlib_reference.md  technical_docs.md
editors/mylo-vscode/: INSTALL.md  example_launch.json  extension.js  language-configuration.json  package.json
editors/mylo-vscode/syntaxes/: mylo.tmLanguage.json
editors/vim/: README.md
editors/vim/ftdetect/: mylo.vim
editors/vim/syntax/: mylo.vim
examples/: amiga_ui.mylo  colors.mylo  raytracer.mylo  sokoban.mylo  threads.mylo  web.mylo
lsp/: README.md  add_to_init.lua  mylo_lsp.c
src/: compiler.c  compiler.h  debug_adapter.c  debug_adapter.h  defines.h  loader.c  loader.h  main.c  mylolib.c  mylolib.h  os_job.c  os_job.h  simple_math_lib.c  simple_math_lib.h  utils.c  utils.h  vm.c  vm.h
tests/: test_dap.txt  test_generate_list.h  test_import.mylo  test_include.h  tests.cpp
tests/test_bindings/: mylo_executable  out.c  test_app.mylo  test_lib.mylo  test_lib.mylo_bind.c
